fixed homepage spacing bugs, changed logo, added login modal view

--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -259,7 +259,7 @@
       width: 100%;
       background: $teal;
 
-      margin-top: -80px;
+      margin-top: -140px;
       margin-bottom: -80px;
 
     }
@@ -279,7 +279,7 @@
       width: 100%;
       background: $teal;
 
-      margin-top: -80px;
+      margin-top: -140px;
 
 
     }
@@ -295,13 +295,14 @@
     background-image: url('./road.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 750px;
     width: 100vw;
 
     .driving-content-view{
 
       margin-top: 80px;
       width: 55%;
+
       box-shadow: 0 0 131px 58px rgba(0,0,0,0.6);
       background: rgba(0,0,0,0.55);
 
